## Makefile.am -- Process this file with automake to produce Makefile.in
 
######################################################################
# PLANNER
######################################################################

planner_FILES =
 
planner_INCLUDES = \
                    -I$(srcdir)/planner
