## Makefile.am -- Process this file with automake to produce Makefile.in
 
######################################################################
# PLANNER
######################################################################

planner_FILES = \
                planner/abstract_plan_node.cpp
 
planner_INCLUDES = \
                    -I$(srcdir)/planner
