## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# PLANNER
######################################################################

planner_FILES = \
				planner/abstract_plan_node.cpp \
				planner/plan_column.cpp \
				planner/plan_node_util.cpp \
				planner/transformer.cpp

planner_INCLUDES = \
				   -I$(srcdir)/planner
