## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# STORAGE
######################################################################

storage_FILES = \
				storage/tuple.cpp \
				storage/tile.cpp \
				storage/tile_group.cpp \
				storage/tile_group_header.cpp \
				storage/table.cpp 

storage_INCLUDES = \
				   -I$(srcdir)/storage    
