## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# STORAGE
######################################################################

storage_FILES = \
				storage/table.cpp \
				storage/tile.cpp \
				storage/tile_group.cpp \
				storage/tile_group_header.cpp \
				storage/tuple.cpp

storage_INCLUDES = \
				   -I$(srcdir)/storage
