## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# STORAGE
######################################################################

storage_FILES = \
				storage/abstract_table.cpp \
				storage/data_table.cpp \
				storage/table_factory.cpp \
				storage/tile.cpp \
				storage/tile_group.cpp \
				storage/tile_group_header.cpp \
				storage/tile_group_factory.cpp \
				storage/tuple.cpp

storage_INCLUDES = \
				   -I$(srcdir)/storage
