## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# CLUSTERER
######################################################################

check_PROGRAMS += clusterer_test

clusterer_test_SOURCES = brain/clusterer_test.cpp
