## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# COMMON
######################################################################

check_PROGRAMS += \
		plan_transformer_test 

plan_transformer_test_SOURCES = bridge/plan_transformer_test.cpp

plan_transformer_test_LDADD = -L$(top_builddir)/src -lpeloton -lpq -ltbb


