## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# COMMON
######################################################################

check_PROGRAMS += sample_test \
				  logger_test

sample_test_SOURCES = common/sample_test.cpp

logger_test_SOURCES = common/logger_test.cpp
