## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# COMMON
######################################################################

check_PROGRAMS += \
		sample_test \
		logger_test \
		value_test \
		value_array_test \
		cache_test 

sample_test_SOURCES = common/sample_test.cpp

logger_test_SOURCES = common/logger_test.cpp

value_test_SOURCES = common/value_test.cpp

value_array_test_SOURCES = common/value_array_test.cpp

cache_test_SOURCES = common/cache_test.cpp