## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# EXECUTOR
######################################################################

check_PROGRAMS += expression_test

expression_test_SOURCES = expression/expression_test.cpp