## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# EXECUTOR
######################################################################

check_PROGRAMS += expression_test container_tuple_test

expression_test_SOURCES = expression/expression_test.cpp
						
container_tuple_test_SOURCES = expression/container_tuple_test.cpp